--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
 
 		<title>{{ site.title }}</title>
 
-		<link rel="stylesheet" type="text/css" href="{{ "/css/main.css" | prepend: site.baseurl | prepend: site.url }}">
+		<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
 		<!-- with regular
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 		-->
@@ -23,4 +23,8 @@
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script src="/assets/js/application.js"></script>
+
 </head>
