--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<header class="">
-{{site.author}}
-{{site.description}}
-<a href="/about">About & Contact</a>
+<header class="tc center mw-30">
+  <div> {{site.author}} </div>
+  <div class="serif"> {{site.description}} </div>
+  <div><a href="/about">About & Contact</a></div>
 </header>
