--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<header class="tc center mw-30">
-  <div> {{site.author}} </div>
-  <div class="serif"> {{site.description}} </div>
-  <div><a href="/about">About & Contact</a></div>
+<header class="tc center mw-22">
+  <div class="sans-serif fw-700"> {{site.author}} </div>
+  <div class=""> {{site.description}} </div>
+  <div><a href="/about" class="link underline white dim">About & Contact</a></div>
 </header>
