--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,15 @@
 
 <body class="bg-black">
 
+  <div class="mw-40 center">
+
     {% include header.html %}
 
       <div class="">
         {{ content }}
       </div>
+
+  </div>
 
 </body>
 
