--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -1,6 +1,20 @@
 
-body {
-  font-family: 'Montserrat', sans-serif;
+html {
+  font-family: 'Times', serif;
   font-size: 20px;
   color: white;
 }
+
+.h1 { font-size: 2rem; }
+.h2 { font-size: 1.5rem; }
+.h3 { font-size: 1rem; }
+.h4 { font-size: .75rem; }
+.h5 { font-size: .50rem; }
+
+.serif { font-family: 'Times', serif; }
+.sans-serif { font-family: 'Montserrat', sans-serif; }
+
+.fw-700 { font-weight: 700; }
+
+.underline {
+  border-bottom: 1px solid #fff; }
