--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<header class="tc center mw-22">
+<header class="tc center mw-22 pt2 pb1">
   <div class="sans-serif fw-700"> {{site.author}} </div>
   <div class=""> {{site.description}} </div>
-  <div><a href="/about" class="link underline white dim">About & Contact</a></div>
+  <div class="mt05 pt025 pb025"><a href="/about" class="link underline white dim">About & Contact</a></div>
 </header>
