--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,24 +13,32 @@
     {% for number in site.project-order %}
       {% for post in site.posts %}
         {% if post.order-id == {{number}} %}
-          <div class="h5 sans-serif fw-700"> {% if forloop.index < 10 %}0{% endif %}{{ forloop.index }}</div>
-          <a href="{{ post.url }}" class="relative block">
-              <img src="{{ post.cover-image }}" class="w-100 dim bg-white block" />
-              <div class="overlay">
-                  <h1 class="h1 fw-700 sans-serif black tc">+ See More</h1>
+          <div class="pb4">
+            <div class="h5 sans-serif fw-700"> {% if forloop.index < 10 %}0{% endif %}{{ forloop.index }}</div>
+            <a href="{{ post.url }}" class="relative block mt025">
+                <img src="{{ post.cover-image }}" class="w-100 dim bg-white block" />
+                <div class="overlay bg-white-7">
+                    <h1 class="h1 fw-700 sans-serif black tc relative vc">+ See More</h1>
+                </div>
+            </a>
+            <div class="pt05">
+              <a href="{{ post.url }}" class="link dim h4 white fw-700 sans-serif left">{{ post.title }}</a>
+              <div class="h4 right">
+                {% for tag in post.tags %}
+                  <a href="#" class="link white dim"> {{tag}}</a>{% unless forloop.last %}, {% endunless %}
+                {% endfor %}
               </div>
-          </a>
-          <a href="{{ post.url }}" class="link dim h4 white fw-700 sans-serif">{{ post.title }}</a>
-          <div> {{ post.tags }}</div>
+            </div>
+          </div>
         {% endif %}
       {% endfor %}
     {% endfor %}
-
-    <div class="ajax">
+  <div class="ajax">
+    <div class="bg-black fixed overflow-scroll mh-100 w-100 t-0">
       {{ content }}
     </div>
-
   </div>
+</div>
 
 </body>
 
