--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -5,6 +5,8 @@
 
 .bg-black { background: #000; }
 .bg-white { background: #fff; }
+.bg-white-7 { background-color: rgba(255, 255, 255, 0.7) };
+
 
 .white { color: #fff; }
 .black { color: #000; }
@@ -19,10 +21,16 @@
 .mw-22 { max-width: 22rem; }
 .mw-40 { max-width: 40rem; }
 
+.mh-100 { max-height: 100%; }
+
 .w-100 { width: 100%; }
 
 .absolute { position: absolute; }
 .relative { position: relative; }
+.fixed { position: fixed; }
+
+.overflow-hidden { overflow: hidden; }
+.overflow-scroll { overflow: scroll; }
 
 .t-0 { top: 0; }
 .r-0 { right: 0; }
@@ -36,7 +44,6 @@
 .dim:active { opacity: .8; -webkit-transition: opacity .15s ease-out; transition: opacity .15s ease-out; }
 
 .overlay {
-  background-color: rgba(255, 255, 255, 0.7);
   height: 100%;
   width: 100%;
   top: 0;
@@ -69,3 +76,87 @@
   transition: color .15s ease-in;
   outline: 1px dotted currentColor;
 }
+
+.left { float: left; }
+.right { float: right; }
+
+.vc {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.border-top { border-top: 1px solid #fff; }
+.border-bottom { border-bottom: 1px solid #fff; }
+
+
+.pa025 { padding: .25rem; }
+.pa05 { padding: .5rem; }
+.pa1 { padding: 1rem; }
+.pa2 { padding: 2rem; }
+.pa3 { padding: 3rem; }
+.pa4 { padding: 4rem; }
+.pa5 { padding: 5rem; }
+.pt025 { padding-top: .25rem; }
+.pt05 { padding-top: .5rem; }
+.pt1 { padding-top: 1rem; }
+.pt2 { padding-top: 2rem; }
+.pt3 { padding-top: 3rem; }
+.pt4 { padding-top: 4rem; }
+.pt5 { padding-top: 5rem; }
+.pb025 { padding-bottom: .25rem; }
+.pb05 { padding-bottom: .5rem; }
+.pb1 { padding-bottom: 1rem; }
+.pb2 { padding-bottom: 2rem; }
+.pb3 { padding-bottom: 3rem; }
+.pb4 { padding-bottom: 4rem; }
+.pb5 { padding-bottom: 5rem; }
+.pl025 { padding-left: .25rem; }
+.pl05 { padding-left: .5rem; }
+.pl1 { padding-left: 1rem; }
+.pl2 { padding-left: 2rem; }
+.pl3 { padding-left: 3rem; }
+.pl4 { padding-left: 4rem; }
+.pl5 { padding-left: 5rem; }
+.pr025 { padding-right: .25rem; }
+.pr05 { padding-right: .5rem; }
+.pr1 { padding-right: 1rem; }
+.pr2 { padding-right: 2rem; }
+.pr3 { padding-right: 3rem; }
+.pr4 { padding-right: 4rem; }
+.pr5 { padding-right: 5rem; }
+
+.ma025 { margin: .25rem; }
+.ma05 { margin: .5rem; }
+.ma1 { margin: 1rem; }
+.ma2 { margin: 2rem; }
+.ma3 { margin: 3rem; }
+.ma4 { margin: 4rem; }
+.ma5 { margin: 5rem; }
+.mt025 { margin-top: .25rem; }
+.mt05 { margin-top: .5rem; }
+.mt1 { margin-top: 1rem; }
+.mt2 { margin-top: 2rem; }
+.mt3 { margin-top: 3rem; }
+.mt4 { margin-top: 4rem; }
+.mt5 { margin-top: 5rem; }
+.mb025 { margin-bottom: .25rem; }
+.mb05 { margin-bottom: .5rem; }
+.mb1 { margin-bottom: 1rem; }
+.mb2 { margin-bottom: 2rem; }
+.mb3 { margin-bottom: 3rem; }
+.mb4 { margin-bottom: 4rem; }
+.mb5 { margin-bottom: 5rem; }
+.ml025 { margin-left: .25rem; }
+.ml05 { margin-left: .5rem; }
+.ml1 { margin-left: 1rem; }
+.ml2 { margin-left: 2rem; }
+.ml3 { margin-left: 3rem; }
+.ml4 { margin-left: 4rem; }
+.ml5 { margin-left: 5rem; }
+.mr025 { margin-right: .25rem; }
+.mr05 { margin-right: .5rem; }
+.mr1 { margin-right: 1rem; }
+.mr2 { margin-right: 2rem; }
+.mr3 { margin-right: 3rem; }
+.mr3 { margin-right: 4rem; }
+.mr3 { margin-right: 5rem; }
