--- a/_layouts/grid.html
+++ b/_layouts/grid.html
@@ -7,14 +7,14 @@
 <body class="bg-black pb5">
 
   <div class="">
-    <div class="mw-40 center">
+    <div class="mw-60 center">
     {% include header.html %}
 
+    <div class="h0">
     {% for number in site.project-order %}
       {% for post in site.posts %}
         {% if post.order-id == {{number}} %}
-          <div class="pb4">
-            <div class="h5 sans-serif fw-700"> {% if forloop.index < 10 %}0{% endif %}{{ forloop.index }}</div>
+          <div class="inlineblock w-grid mr3 mb3">
             <a href="{{ post.url }}" class="relative block mt025">
                 <img src="{{ post.cover-image }}" class="w-100 dim bg-white block" />
                 <div class="overlay bg-white-7">
@@ -23,16 +23,12 @@
             </a>
             <div class="pt05">
               <a href="{{ post.url }}" class="link dim h4 white fw-700 sans-serif left">{{ post.title }}</a>
-              <div class="h4 right">
-                {% for tag in post.tags %}
-                  <a href="#" class="link white dim"> {{tag}}</a>{% unless forloop.last %}, {% endunless %}
-                {% endfor %}
-              </div>
             </div>
           </div>
         {% endif %}
       {% endfor %}
     {% endfor %}
+    </div>
   </div>
   <div class="ajax fade">
     <div class="bg-black fixed overflow-scroll mh-100 w-100 t-0">
