--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,27 +2,16 @@
 layout: default
 ---
 
-<div class="mw-40">
+<div class="mw-40 center pb5">
 
   {% include header.html %}
 
   <div class="border-top">
     <div class="cf">
-      <a href="/index" class="right cf">close</a>
+      <a href="/" class="right cf">close</a>
     </div>
-    <div class="pt05 cf">
-      <a href="{{ page.url }}" class="link dim h4 white fw-700 sans-serif left">{{ page.title }}</a>
-      <div class="h4 right">
-        {% for tag in page.tags %}
-          <a href="#" class="link white dim"> {{tag}}</a>{% unless forloop.last %}, {% endunless %}
-        {% endfor %}
-      </div>
-    </div>
-    {{ page.description }}</div>
-  <!--  {{ page.description }} -->
-  <div class="markdown pt2">
+    <div class="markdown pt1">
       {{ content }}
     </div>
-    <a href="/index" class="right">close</a>
   </div>
 </div>
