--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -20,10 +20,20 @@
 
 .mw-22 { max-width: 22rem; }
 .mw-40 { max-width: 40rem; }
+.mw-60 { max-width: 60rem; }
 
 .mh-100 { max-height: 100%; }
 
+.w-25 { width: 25%; }
 .w-100 { width: 100%; }
+
+.w-10 { width: 10rem; }
+.w-15 { width: 12rem; }
+
+.w-grid { width:calc((100% / 3) - (10rem / 3)); }
+.w-grid:nth-of-type(3n) {
+  margin-right: 0;
+}
 
 .absolute { position: absolute; }
 .relative { position: relative; }
@@ -38,6 +48,7 @@
 .l-0 { left: 0; }
 
 .block { display: block; }
+.inlineblock { display: inline-block; }
 
 .dim { opacity: 1; -webkit-transition: opacity .15s ease-in; transition: opacity .15s ease-in; }
 .dim:hover, .dim:focus { opacity: .7; -webkit-transition: opacity .15s ease-in; transition: opacity .15s ease-in; }
@@ -77,13 +88,22 @@
   outline: 1px dotted currentColor;
 }
 
-.left { float: left; }
-.right { float: right; }
+.left {
+  float: left;
+  display:inline;
+}
+.right {
+  float: right;
+  display:inline;
+}
 
 .cf:before,
-.cf:after   { content: " "; display: table; }
-.cf:after   { clear: both; }
-.cf         { *zoom: 1; }
+.cf:after { content: " "; display: table; }
+.cf:after { clear: both; }
+.cf { *zoom: 1; }
+
+.ws-prewrap { white-space: pre-wrap; }
+
 
 .vc {
   top: 50%;
@@ -93,6 +113,42 @@
 .border-top { border-top: 1px solid #fff; }
 .border-bottom { border-bottom: 1px solid #fff; }
 
+.flex { display: flex; }
+.flex-none { flex: none; }
+.flex-wrap { flex-wrap: wrap; }
+.justify-between { justify-content: space-between; }
+
+.fade {
+    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 1s; /* Firefox < 16 */
+        -ms-animation: fadein 1s; /* Internet Explorer */
+         -o-animation: fadein 1s; /* Opera < 12.1 */
+            animation: fadein 1s;
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
 
 
 .pa025 { padding: .25rem; }
