--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -9,6 +9,7 @@ body {
   line-height: 1.1;
 }
 
+.h0 { font-size: 0; }
 .h1 { font-size: 2rem; }
 .h2 { font-size: 1.5rem; }
 .h3 { font-size: 1rem; }
