--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -27,12 +27,23 @@
 .w-25 { width: 25%; }
 .w-100 { width: 100%; }
 
+.w-1 { width:1rem; }
 .w-10 { width: 10rem; }
 .w-15 { width: 12rem; }
 
 .w-grid { width:calc((100% / 3) - (10rem / 3)); }
 .w-grid:nth-of-type(3n) {
   margin-right: 0;
+}
+
+.hide { visibility: hidden; }
+
+.mirror {
+    -webkit-transform: scale(-1, 1);
+    -moz-transform: scale(-1, 1);
+    -ms-transform: scale(-1, 1);
+    -o-transform: scale(-1, 1);
+    transform: scale(-1, 1);
 }
 
 .absolute { position: absolute; }
@@ -119,11 +130,11 @@
 .justify-between { justify-content: space-between; }
 
 .fade {
-    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 1s; /* Firefox < 16 */
-        -ms-animation: fadein 1s; /* Internet Explorer */
-         -o-animation: fadein 1s; /* Opera < 12.1 */
-            animation: fadein 1s;
+    -webkit-animation: fadein .25s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein .25s; /* Firefox < 16 */
+        -ms-animation: fadein .25s; /* Internet Explorer */
+         -o-animation: fadein .25s; /* Opera < 12.1 */
+            animation: fadein .25s;
 }
 @keyframes fadein {
     from { opacity: 0; }
