--- a/_layouts/grid.html
+++ b/_layouts/grid.html
@@ -7,7 +7,7 @@
 <body class="bg-black pb5">
 
   <div class="">
-    <div class="mw-60 center">
+    <div class="mw-60 center pl05 pr05">
     {% include header.html %}
 
     <div class="h0">
