--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,16 +2,21 @@
 layout: default
 ---
 
-<div class="mw-40 center pb5 pl05 pr05">
+<div id="ajax-container" class="mw-40 center pb5 pl05 pr05">
 
   {% include header.html %}
 
-  <div class="border-top">
-    <div class="cf">
-      <a href="/" class="right cf">close</a>
-    </div>
-    <div class="markdown pt1">
-      {{ content }}
+  <div class="content-slide">
+
+    <div class="border-top">
+      <div class="cf">
+        <a href="/" class="white serif link dim right closebtn">
+          <img src="/assets/icn/x1.svg" />
+        </a>
+      </div>
+      <div class="markdown pt1">
+        {{ content }}
+      </div>
     </div>
   </div>
 </div>
