--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -19,6 +19,8 @@ body {
 .serif { font-family: 'Times', serif; }
 .sans-serif { font-family: 'Montserrat', sans-serif; }
 
+.smaller { font-size: .93em; }
+
 .fw-700 { font-weight: 700; }
 
 .underline { border-bottom: 1px solid #fff; }
