--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,26 +7,28 @@
 <body class="bg-black pb5">
 
   <div class="">
-    <div class="mw-40 center pl05 pr05 transition-05">
     {% include header.html %}
+
+    <div id="index-container" class="mw-40 center pl05 pr05 transition-05">
+
 
     {% for number in site.project-order %}
       {% for post in site.posts %}
         {% if post.order-id == {{number}} %}
           <div class="pb4">
             <div class="h5 sans-serif fw-700"> {% if forloop.index < 10 %}0{% endif %}{{ forloop.index }}</div>
-            <a href="{{ post.url }}" class="relative block mt025">
+            <a href="{{ post.url }}" class="relative block mt025 projectbtn">
                 <img src="{{ post.cover-image }}" class="w-100 dim bg-white block" />
                 <div class="overlay bg-white-7">
                     <h1 class="h1 fw-700 sans-serif black tc relative vc">+ See More</h1>
                 </div>
             </a>
             <div class="pt05">
-              <a href="{{ post.url }}" class="link dim h4 white fw-700 sans-serif left">{{ post.title }}</a>
+              <a href="{{ post.url }}" class="link dim h4 white fw-700 sans-serif left projectbtn">{{ post.title }}</a>
               <div class="h4 right">
-                {% for tag in post.tags %}
+                <!-- {% for tag in post.tags %}
                   <a href="#" class="link white dim"> {{tag}}</a>{% unless forloop.last %}, {% endunless %}
-                {% endfor %}
+                {% endfor %} -->
               </div>
             </div>
           </div>
@@ -34,8 +36,9 @@
       {% endfor %}
     {% endfor %}
   </div>
+
   <div class="ajax">
-    <div class="bg-black fixed overflow-scroll mh-100 t-0 l-0 w-100 border-box fade">
+    <div id="ajax" class="bg-black fixed overflow-scroll mh-100 t-0 l-0 w-100 border-box">
       {{ content }}
     </div>
   </div>
