--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -50,7 +50,9 @@
 .relative { position: relative; }
 .fixed { position: fixed; }
 
-.overflow-hidden { overflow: hidden; }
+.overflow-hidden {
+  overflow: hidden;
+}
 .overflow-scroll { overflow: scroll; }
 
 .t-0 { top: 0; }
@@ -112,6 +114,10 @@
   transition: 0.5s;
 }
 
+.scale-08 {
+  transform: scale(0.8);
+}
+
 .cf:before,
 .cf:after { content: " "; display: table; }
 .cf:after { clear: both; }
@@ -138,12 +144,13 @@
 .justify-between { justify-content: space-between; }
 
 .fade {
-    -webkit-animation: slide-in .5s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: slide-in .5s; /* Firefox < 16 */
-        -ms-animation: slide-in .5s; /* Internet Explorer */
-         -o-animation: slide-in .5s; /* Opera < 12.1 */
-            animation: slide-in .5s;
+    -webkit-animation: fadein .5s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein .5s; /* Firefox < 16 */
+        -ms-animation: fadein .5s; /* Internet Explorer */
+         -o-animation: fadein .5s; /* Opera < 12.1 */
+            animation: fadein .5s;
 }
+
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
@@ -169,29 +176,79 @@
     to   { opacity: 1; }
 }
 
-@keyframes slide-in {
+@keyframes slide-bottom {
   from { transform: translateY(100%); }
   to   { transform: translateY(0%); }
 }
 /* Firefox < 16 */
-@-moz-keyframes slide-in {
+@-moz-keyframes slide-bottom {
   from { transform: translateY(100%); }
   to   { transform: translateY(0%); }
 }
 /* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes slide-in {
+@-webkit-keyframes slide-bottom {
   from { transform: translateY(100%); }
   to   { transform: translateY(0%); }
 }
 /* Internet Explorer */
-@-ms-keyframes slide-in {
+@-ms-keyframes slide-bottom {
   from { transform: translateY(100%); }
   to   { transform: translateY(0%); }
 }
 /* Opera < 12.1 */
-@-o-keyframes slide-in {
+@-o-keyframes slide-bottom {
   from { transform: translateY(100%); }
   to   { transform: translateY(0%); }
+}
+
+@keyframes slide-right {
+  from { transform: translateX(100%); }
+  to   { transform: translateX(0%); }
+}
+/* Firefox < 16 */
+@-moz-keyframes slide-right {
+  from { transform: translateX(100%); }
+  to   { transform: translateX(0%); }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes slide-right {
+  from { transform: translateX(100%); }
+  to   { transform: translateX(0%); }
+}
+/* Internet Explorer */
+@-ms-keyframes slide-right {
+  from { transform: translateX(100%); }
+  to   { transform: translateX(0%); }
+}
+/* Opera < 12.1 */
+@-o-keyframes slide-right {
+  from { transform: translateX(100%); }
+  to   { transform: translateX(0%); }
+}
+
+@keyframes slide-left {
+  from { transform: translateX(-100%); }
+  to   { transform: translateX(0%); }
+}
+/* Firefox < 16 */
+@-moz-keyframes slide-left {
+  from { transform: translateX(-100%); }
+  to   { transform: translateX(0%); }
+}
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes slide-left {
+  from { transform: translateX(-100%); }
+  to   { transform: translateX(0%); }
+}
+/* Internet Explorer */
+@-ms-keyframes slide-left {
+  from { transform: translateX(-100%); }
+  to   { transform: translateX(0%); }
+}
+/* Opera < 12.1 */
+@-o-keyframes slide-left {
+  from { transform: translateX(-100%); }
+  to   { transform: translateX(0%); }
 }
 
 .pa025 { padding: .25rem; }
