--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,7 +45,7 @@ layout: default
           <a class="white serif link dim ma1 h4 hide prevbtn" href="{{ post.url }}">
             Previous Project <img class="mirror ml05" src="/assets/icn/arrow2.svg" />
           </a>
-          <a href="/index" class="white serif link dim ma1 h4 closebtn">
+          <a href="/" class="white serif link dim ma1 h4 closebtn">
             <img class="" src="/assets/icn/x1.svg" /> Close
           </a>
           {% assign index-next = forloop.index0 | plus:1 %}
@@ -67,7 +67,7 @@ layout: default
               Previous Project <img class="mirror ml05" src="/assets/icn/arrow2.svg" />
             </a>
           {% endfor %}
-          <a href="/index" class="white serif link dim ma1 h4 closebtn">
+          <a href="/" class="white serif link dim ma1 h4 closebtn">
             <img class="" src="/assets/icn/x1.svg" /> Close
           </a>
           <a class="white serif link dim ma1 h4 hide nextbtn" href="{{ post.url }}">
@@ -85,7 +85,7 @@ layout: default
               Previous Project <img class="mirror ml05" src="/assets/icn/arrow2.svg" />
             </a>
           {% endfor %}
-          <a href="/index" class="white serif link dim ma1 h4 closebtn">
+          <a href="/" class="white serif link dim ma1 h4 closebtn">
             <img class="" src="/assets/icn/x1.svg" /> Close
           </a>
           {% assign index-next = forloop.index0 | plus:1 %}
