--- a/assets/css/_markdown.scss
+++ b/assets/css/_markdown.scss
@@ -29,7 +29,7 @@ a:focus   {
 }
 
 p {
-  font-size: 1.5rem;
+  font-size: 1rem;
   line-height: 1.3;
 }
 
@@ -38,3 +38,7 @@ img {
 }
 
 }
+
+h1 { font-size: 2rem; }
+h2 { font-size: 1.5rem; }
+h3 { font-size: .75rem; }
