--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -23,6 +23,7 @@
 .mw-60 { max-width: 60rem; }
 
 .mh-100 { max-height: 100%; }
+.minh-100vh { min-height: 100vh; }
 
 .w-25 { width: 25%; }
 .w-100 { width: 100%; }
