--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div id="ajax-container" class="mw-40 center pb5 pl05 pr05">
+<div id="ajax-container" class="mw-40 minh-100vh center pb5 pl05 pr05">
 
   {% include header.html %}
 
