--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,24 +14,30 @@ layout: default
           {% if page.order-id == {{number}} %}
             <div class="left">
               <span class="h5 sans-serif fw-700"> {% if forloop.index < 10 %}0{% endif %}{{ forloop.index }}</span>
-              <img class="ml025" src="/assets/icn/arrow1.svg" />
+              {% assign index-next = forloop.index0 | plus:1 %}
+              {% assign next = site.posts | where:"order-id",site.project-order[index-next] %}
+              {% for post in next %}
+                <a class="link dim nextbtn" href="{{ post.url }}">
+                  <img class="ml02 h-025" src="/assets/icn/arrow2.svg" />
+                </a>
+              {% endfor %}
             </div>
           {% endif %}
       {% endfor %}
       <a href="/" class="white serif link dim right closebtn">
-        <img src="/assets/icn/x1.svg" />
+        <img class="bump" src="/assets/icn/x1.svg" />
       </a>
     </div>
-    <div class="pt05 cf">
-      <div class="h4 white fw-700 sans-serif left">{{ page.title }}</div>
-      <div class="h4 right">
+    <div class="pb05 h3 cf">
+      <div class="smaller white fw-700 sans-serif left">{{ page.title }}</div>
+      <div class="right">
         <!-- {% for tag in page.tags %}
           <a href="#" class="link white dim"> {{tag}}</a>{% unless forloop.last %}, {% endunless %}
         {% endfor %} -->
       </div>
     </div>
     {% capture description %}{{ page.description }}{% endcapture %}
-    <div class="ws-prewrap">{{ description | markdownify }}</div>
+    <div class="h4 markdown ws-prewrap">{{ description | markdownify }}</div>
   </div>
   <div class="markdown pt2">
       {{ content }}
@@ -43,8 +49,8 @@ layout: default
       <!-- first project -->
       {% if forloop.first %}
         <div class="tc mt2">
-          <a class="white serif link dim ma1 h4 hide prevbtn" href="{{ post.url }}">
-            Previous Project <img class="mirror ml05" src="/assets/icn/arrow2.svg" />
+          <a class="white serif link dim h4 hide prevbtn" href="{{ post.url }}">
+            Previous Project <img class="mirror h-025 ml05" src="/assets/icn/arrow2.svg" />
           </a>
           <a href="/" class="white serif link dim ma1 h4 closebtn">
             <img class="" src="/assets/icn/x1.svg" /> Close
@@ -52,8 +58,8 @@ layout: default
           {% assign index-next = forloop.index0 | plus:1 %}
           {% assign next = site.posts | where:"order-id",site.project-order[index-next] %}
           {% for post in next %}
-            <a class="white serif link dim ma1 h4 nextbtn" href="{{ post.url }}">
-              <img class="mr05" src="/assets/icn/arrow2.svg" /> Next Project
+            <a class="white serif link dim h4 nextbtn" href="{{ post.url }}">
+              <img class="mr05 h-025" src="/assets/icn/arrow2.svg" /> Next Project
             </a>
           </div>
         {% endfor %}
@@ -64,37 +70,39 @@ layout: default
           {% assign index-previous = forloop.index0 | minus:1 %}
           {% assign prev = site.posts | where:"order-id",site.project-order[index-previous] %}
           {% for post in prev %}
-            <a class="white serif link dim ma1 h4 prevbtn" href="{{ post.url }}">
-              Previous Project <img class="mirror ml05" src="/assets/icn/arrow2.svg" />
+            <a class="white serif link dim h4 prevbtn" href="{{ post.url }}">
+              Previous Project <img class="mirror h-05 ml025" src="/assets/icn/arrow2.svg" />
             </a>
           {% endfor %}
           <a href="/" class="white serif link dim ma1 h4 closebtn">
             <img class="" src="/assets/icn/x1.svg" /> Close
           </a>
-          <a class="white serif link dim ma1 h4 hide nextbtn" href="{{ post.url }}">
-            <img class="mr05" src="/assets/icn/arrow2.svg" /> Next Project
+          <a class="white serif link dim h4 hide nextbtn" href="{{ post.url }}">
+            <img class="mr05 h-025" src="/assets/icn/arrow2.svg" /> Next Project
           </a>
         </div>
 
       <!-- middle projects -->
       {% else %}
-        <div class="tc mt2">
+        <div class="mt2">
+          <div class="tc center">
           {% assign index-previous = forloop.index0 | minus:1 %}
           {% assign prev = site.posts | where:"order-id",site.project-order[index-previous] %}
           {% for post in prev %}
-            <a class="white serif link dim ma1 h4 prevbtn" href="{{ post.url }}">
-              Previous Project <img class="mirror ml05" src="/assets/icn/arrow2.svg" />
+            <a class="white serif link dim h4 inline-block prevbtn" href="{{ post.url }}">
+              Previous Project <img class="mirror h-05 ml025" src="/assets/icn/arrow2.svg" />
             </a>
           {% endfor %}
-          <a href="/" class="white serif link dim ma1 h4 closebtn">
+          <a href="/" class="white serif link dim ml2 mr2 h4 inline-block closebtn">
             <img class="" src="/assets/icn/x1.svg" /> Close
           </a>
           {% assign index-next = forloop.index0 | plus:1 %}
           {% assign next = site.posts | where:"order-id",site.project-order[index-next] %}
           {% for post in next %}
-            <a class="white serif link dim ma1 h4 nextbtn" href="{{ post.url }}">
-              <img class="mr05" src="/assets/icn/arrow2.svg" /> Next Project
+            <a class="white serif link dim h4 inline-block nextbtn" href="{{ post.url }}">
+              <img class="mr025 h-05" src="/assets/icn/arrow2.svg" /> Next Project
             </a>
+          </div>
           {% endfor %}
       {% endif %}
     {% endif %}
