--- a/assets/css/_markdown.scss
+++ b/assets/css/_markdown.scss
@@ -2,9 +2,6 @@
 
 a {
   color: white;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
-  font-size: 1rem;
   text-decoration: none;
   opacity: 1;
   transition: color .15s ease-in, opacity .15s ease-in;
@@ -30,15 +27,25 @@ a:focus   {
 
 p {
   font-size: 1rem;
-  line-height: 1.3;
+  line-height: 1.4;
+}
+
+code {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
 }
 
 img {
   width: 100%;
+  margin-bottom: 2rem;
 }
 
+h1 { font-size: 1.5rem; }
+h2 { font-size: 1.25rem; }
+h3 {
+  font-size: 1rem;
+  max-width: 24rem;
 }
 
-h1 { font-size: 2rem; }
-h2 { font-size: 1.5rem; }
-h3 { font-size: .75rem; }
+
+}
