--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -20,6 +20,7 @@
 
 .mw-22 { max-width: 22rem; }
 .mw-40 { max-width: 40rem; }
+.mw-50 { max-width: 50rem; }
 .mw-60 { max-width: 60rem; }
 
 .mh-100 { max-height: 100%; }
@@ -31,6 +32,8 @@
 .w-1 { width:1rem; }
 .w-10 { width: 10rem; }
 .w-15 { width: 12rem; }
+
+.h-05 { height:.5rem; }
 
 .w-grid { width:calc((100% / 3) - (10rem / 3)); }
 .w-grid:nth-of-type(3n) {
@@ -50,6 +53,8 @@
 .absolute { position: absolute; }
 .relative { position: relative; }
 .fixed { position: fixed; }
+
+.bump { transform: transateY(2px); }
 
 .overflow-hidden {
   overflow: hidden;
