--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,10 @@
 
   <div class="">
     {% include header.html %}
-
-    <div id="index-container" class="mw-40 center pl05 pr05 transition-05">
+    <a href="/grid" class="fixed t-2 r-2 z-2 link dim none block-m closebtn">
+      <img src="/assets/icn/grid.svg" />
+    </a>
+    <div id="index-container" class="mw-40 mw-50-l center pl05 pr05 transition-05">
 
 
     {% for number in site.project-order %}
