--- a/assets/css/_markdown.scss
+++ b/assets/css/_markdown.scss
@@ -27,7 +27,7 @@ a:focus   {
 
 p {
   font-size: 1rem;
-  line-height: 1.4;
+  line-height: 1.2;
 }
 
 code {
@@ -37,11 +37,11 @@ code {
 
 img {
   width: 100%;
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 h1 { font-size: 1.5rem; }
-h2 { font-size: 1.25rem; }
+h2 { font-size: .75rem; }
 h3 {
   font-size: 1rem;
   max-width: 24rem;
@@ -49,3 +49,5 @@ h3 {
 
 
 }
+
+.description > .markdown > p { font-size: .75rem; }
