--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -18,6 +18,9 @@
   margin-left: auto;
 }
 
+.minw-25 { min-width: 25%; }
+.minw-33 { min-width: calc(100% / 3); }
+
 .mw-22 { max-width: 22rem; }
 .mw-40 { max-width: 40rem; }
 .mw-50 { max-width: 50rem; }
@@ -31,14 +34,14 @@
 
 .w-1 { width:1rem; }
 .w-10 { width: 10rem; }
-.w-15 { width: 12rem; }
+.w-12 { width: 12rem; }
+.w-15 { width: 15rem; }
+.w-20 { width: 20rem; }
+.w-30 { width: 30rem; }
 
 .h-05 { height:.5rem; }
 
-.w-grid { width:calc((100% / 3) - (10rem / 3)); }
-.w-grid:nth-of-type(3n) {
-  margin-right: 0;
-}
+.w-grid { min-width: calc((100% / 3) - (6rem / 3)); }
 
 .hide { visibility: hidden; }
 
@@ -66,6 +69,12 @@
 .b-0 { bottom: 0; }
 .l-0 { left: 0; }
 
+.t-2 { top: 2rem; }
+.r-2 { right: 2rem; }
+
+.z-2 { z-index: 2; }
+
+.none { display: none; }
 .block { display: block; }
 .inlineblock { display: inline-block; }
 
@@ -326,5 +335,16 @@
 .mr1 { margin-right: 1rem; }
 .mr2 { margin-right: 2rem; }
 .mr3 { margin-right: 3rem; }
-.mr3 { margin-right: 4rem; }
-.mr3 { margin-right: 5rem; }
+.mr4 { margin-right: 4rem; }
+.mr5 { margin-right: 5rem; }
+
+
+.flex { display: flex; }
+.flex-between {
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+.flex-row { flex-direction: row; }
+.flex-wrap { flex-wrap: wrap }
+.flex-grow { flex-grow: 1; }
