broken grid page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
 
 
 <body class="bg-black pb5">
-
-  <div class="">
+  <div>
+  <div class="indexswap">
     {% include header.html %}
-    <a href="/grid" class="fixed t-2 r-2 z-2 link dim none block-m closebtn">
+    <a href="/grid" class="fixed t-2 r-2 z-2 link dim none block-m closebtn indexbtn">
       <img src="/assets/icn/grid.svg" />
     </a>
     <div id="index-container" class="mw-40 mw-50-l center pl05 pr05 transition-05">
@@ -46,7 +46,7 @@
     </div>
   </div>
 </div>
-
+</div>
 </body>
 
 </html>
