--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,7 +33,7 @@ layout: default
         <img class="bump" src="/assets/icn/x1.svg" />
       </a>
     </div>
-    <div class="pb025 h3 cf">
+    <div class="pb025 pt025 h3 cf">
       <div class="smaller white fw-700 sans-serif left">{{ page.title }}</div>
       <div class="right">
         <!-- {% for tag in page.tags %}
