--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,9 +29,7 @@
             <div class="pt05">
               <a href="{{ post.url }}" class="link dim h4 white fw-700 sans-serif left projectbtn">{{ post.title }}</a>
               <div class="h4 right">
-                <!-- {% for tag in post.tags %}
-                  <a href="#" class="link white dim"> {{tag}}</a>{% unless forloop.last %}, {% endunless %}
-                {% endfor %} -->
+                {{post.small-text}}
               </div>
             </div>
           </div>
