--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,10 +35,8 @@ layout: default
     </div>
     <div class="pb025 pt025 h3 cf">
       <div class="smaller white fw-700 sans-serif left">{{ page.title }}</div>
-      <div class="right">
-        <!-- {% for tag in page.tags %}
-          <a href="#" class="link white dim"> {{tag}}</a>{% unless forloop.last %}, {% endunless %}
-        {% endfor %} -->
+      <div class="h4 right">
+        {{page.small-text}}
       </div>
     </div>
     {% capture description %}{{ page.description }}{% endcapture %}
