grid-single switch

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,7 @@
 
 
 <body class="bg-black pb5">
-  <div>
-  <div class="indexswap">
+  <div class="">
     {% include header.html %}
     <a href="/grid" class="fixed t-2 r-2 z-2 link dim none block-m closebtn indexbtn">
       <img src="/assets/icn/grid.svg" />
@@ -43,7 +42,6 @@
       {{ content }}
     </div>
   </div>
-</div>
 </div>
 </body>
 
