--- a/_layouts/grid.html
+++ b/_layouts/grid.html
@@ -5,8 +5,7 @@
 
 
 <body class="bg-black pb5">
-  <div>
-  <div class="indexswap">
+  <div class="">
     {% include header.html %}
     <a href="/" class="fixed t-2 r-2 z-2 link dim none block-m closebtn indexbtn">
       <img src="/assets/icn/single.svg" />
@@ -42,7 +41,6 @@
       {{ content }}
     </div>
   </div>
-</div>
 </div>
 
 </body>
