--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -10,6 +10,7 @@ body {
 }
 
 .h0 { font-size: 0; }
+.ha { font-size: 3rem; }
 .h1 { font-size: 2rem; }
 .h2 { font-size: 1.5rem; }
 .h3 { font-size: 1rem; }
@@ -21,6 +22,8 @@ body {
 
 .smaller { font-size: .9em; }
 
-.fw-700 { font-weight: 700; }
+.fw-600 { font-weight: 600; }
 
 .underline { border-bottom: 1px solid #fff; }
+
+.track { letter-spacing: 0.5px; }
