--- a/assets/css/_markdown.scss
+++ b/assets/css/_markdown.scss
@@ -7,6 +7,13 @@ a {
   transition: color .15s ease-in, opacity .15s ease-in;
 }
 
+em {
+  font-style: italic;
+}
+strong {
+  font-weight: bold;
+}
+
 a:link,
 a:visited {
   transition: color .15s ease-in;
@@ -40,7 +47,11 @@ img {
   margin-bottom: 1.5rem;
 }
 
-h1 { font-size: 1.5rem; }
+h1 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  letter-spacing: 0.5px;
+ }
 h2 { font-size: .75rem; }
 h3 {
   font-size: 1rem;
