--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -5,7 +5,7 @@
 
 .bg-black { background: #000; }
 .bg-white { background: #fff; }
-.bg-white-7 { background-color: rgba(255, 255, 255, 0.7) };
+.bg-white-95 { background-color: rgba(255, 255, 255, 0.95) };
 
 
 .white { color: #fff; }
@@ -319,6 +319,7 @@
 .mb025 { margin-bottom: .25rem; }
 .mb05 { margin-bottom: .5rem; }
 .mb1 { margin-bottom: 1rem; }
+.mb15 { margin-bottom: 1.5rem; }
 .mb2 { margin-bottom: 2rem; }
 .mb3 { margin-bottom: 3rem; }
 .mb4 { margin-bottom: 4rem; }
