--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,14 +16,14 @@
     {% for number in site.project-order %}
       {% assign order_forloop = forloop %}
       {% for post in site.posts %}
-        {% if post.order-id == {{number}} %}
-          <div class="pb4">
+        {% if post.order-id == number %}
+          <div class="pb2 pb4-s">
             <a href="{{ post.url }}" class="relative block mt025 projectbtn">
                 <img src="{{ post.cover-image }}" class="w-100 dim bg-white block" />
                 <div class="overlay bg-white-95 tc">
                   <div class="relative vc pa2">
-                    <h1 class="ha black mb15">{{ post.title }}</h1>
-                    <h2 class="h4 black sans-serif fw-600 smaller">{{ post.small-text }}</h2>
+                    <h1 class="h2 ha-s black mb15">{{ post.title }}</h1>
+                    <h2 class="h5 black sans-serif fw-600 smaller-s">{{ post.small-text }}</h2>
                   </div>
                 </div>
             </a>
