--- a/assets/css/_breakpoints.scss
+++ b/assets/css/_breakpoints.scss
@@ -15,3 +15,20 @@
   .block-m { display: block; }
 
 }
+
+// small
+@media (min-width: 600px) {
+
+  .pb4-s { padding-bottom: 4rem; }
+  .ha-s { font-size: 3rem; }
+  .smaller-s { font-size: .9em; }
+  .dib-s { display: inline-block; }
+
+  br { display: block; }
+
+  .markdown {
+    h1 {
+      font-size: 1.5rem;
+    }
+  }
+}
