--- a/assets/css/_markdown.scss
+++ b/assets/css/_markdown.scss
@@ -48,7 +48,8 @@ img {
 }
 
 h1 {
-  font-size: 1.5rem;
+  //font-size set in breakpoints
+  font-size: 1rem;
   margin-bottom: 1rem;
   letter-spacing: 0.5px;
  }
