fix grid switch on ff and safari

--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -39,6 +39,8 @@
 .w-20 { width: 20rem; }
 .w-30 { width: 30rem; }
 
+.h-0 { height:0rem; }
+.h-auto { height: auto; }
 .h-05 { height:.5rem; }
 
 .w-grid { min-width: calc((100% / 3) - (6rem / 3)); }
