--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
                 <div class="overlay bg-white-95 tc">
                   <div class="relative vc pa2">
                     <h1 class="h2 ha-s black mb15">{{ post.title }}</h1>
-                    <h2 class="h5 black sans-serif fw-600 smaller-s">{{ post.small-text }}</h2>
+                    <h2 class="h4 lh-13 black sans-serif fw-600 smaller-s">{{ post.small-text }}</h2>
                   </div>
                 </div>
             </a>
