--- a/_layouts/grid.html
+++ b/_layouts/grid.html
@@ -24,7 +24,7 @@
                       <div class="overlay h4 bg-white-95 tc">
                         <div class="relative vc pa2">
                           <h1 class="h2 black mb1">{{ post.title }}</h1>
-                          <h2 class="h4 black sans-serif fw-600 smaller">{{ post.small-text }}</h2>
+                          <h2 class="h4 black sans-serif lh-13 fw-600 smaller">{{ post.small-text }}</h2>
                         </div>
                       </div>
                   </a>
