--- a/assets/css/_markdown.scss
+++ b/assets/css/_markdown.scss
@@ -52,6 +52,7 @@ h1 {
   font-size: 1rem;
   margin-bottom: 1rem;
   letter-spacing: 0.5px;
+  line-height: 1.15
  }
 h2 { font-size: .75rem; }
 h3 {
