--- a/assets/css/_typography.scss
+++ b/assets/css/_typography.scss
@@ -9,6 +9,8 @@ body {
   line-height: 1.1;
 }
 
+.lh-13 { line-height: 1.3; }
+
 .h0 { font-size: 0; }
 .ha { font-size: 3rem; }
 .h1 { font-size: 2rem; }
