get rid of pre wrap

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
         </div>
         {% capture description %}{{ page.description }}{% endcapture %}
         <div class="description pr2">
-          <div class="markdown ws-prewrap">{{ description | markdownify }}</div>
+          <div class="markdown">{{ description | markdownify }}</div>
         </div>
       </div>
 
