adding padding under description

--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -285,6 +285,7 @@
 .pb025 { padding-bottom: .25rem; }
 .pb05 { padding-bottom: .5rem; }
 .pb1 { padding-bottom: 1rem; }
+.pb15 { padding-bottom: 1.5rem; }
 .pb2 { padding-bottom: 2rem; }
 .pb3 { padding-bottom: 3rem; }
 .pb4 { padding-bottom: 4rem; }
