max-w to description

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
           <div class="smaller white fw-600 sans-serif left">{{ page.title }}</div>
         </div>
         {% capture description %}{{ page.description }}{% endcapture %}
-        <div class="description pr2">
+        <div class="description mw-22 pr2">
           <div class="markdown">{{ description | markdownify }}</div>
         </div>
       </div>
