fix ios scrolling, smaller email

--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -62,6 +62,8 @@
 .bump { line-height: 0; }
 
 .overflow-hidden {
+  height: 100%;
+  position: relative;
   overflow: hidden;
 }
 .overflow-scroll { overflow: scroll; }
