--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
 
 <body class="bg-black pb5">
-  <div class="">
+  <div id="wrap" class="">
     {% include header.html %}
     <a href="/grid" class="fixed t-2 r-2 z-2 link dim none block-m closebtn indexbtn">
       <img src="/assets/icn/grid.svg" />
