--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -62,8 +62,9 @@
 .bump { line-height: 0; }
 
 .overflow-hidden {
-  height: 100vh;
-  position: relative;
+  height: 100%;
+  width: 100%;
+  position: fixed;
   overflow: hidden;
 }
 .overflow-scroll { overflow: scroll; }
