--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -64,7 +64,7 @@
 .overflow-hidden {
   height: 100%;
   width: 100%;
-  position: fixed;
+  position: relative;
   overflow: hidden;
 }
 .overflow-scroll { overflow: scroll; }
