--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -67,7 +67,10 @@
   position: relative;
   overflow: hidden;
 }
-.overflow-scroll { overflow: scroll; }
+.overflow-scroll {
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
 
 .t-0 { top: 0; }
 .r-0 { right: 0; }
