remove br tags in description

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 
 		<meta name="author" itemprop="author" content="{{site.author}}">
 		<meta name="keywords" itemprop="keywords" content="{{site.keywords}}">
-		<meta name="description" itemprop="description" content="{{site.author}} {{site.description}}">
+		<meta name="description" itemprop="description" content="{{site.author}} {{site.description | remove: "<br>"}}">
 
 		<!-- favicon -->
 
