--- a/_includes/video-controls.html
+++ b/_includes/video-controls.html
@@ -1,5 +1,5 @@
 <div class="local-video">
-  <video playsinline autoplay muted loop>
+  <video playsinline controls autoplay="false" loop="false">
     <source src="{{ include.src }}" type="video/mp4" />
     <p>
       Your browser doesn't support HTML5 video. Here is a
