--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -721,3 +721,18 @@ br {
     margin-bottom: 1.5rem;
   }
 }
+
+.vimeo-video {
+  position: relative;
+  height: 0;
+  max-height: 90vh;
+  max-width: 100%;
+  margin-bottom: 1.5rem;
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
