remove avatar vimeo

--- a/_includes/vimeo-controls.html
+++ b/_includes/vimeo-controls.html
@@ -7,7 +7,7 @@
   <iframe
     src="https://player.vimeo.com/video/{{
       include.src
-    }}?byline=0&title=0&color=fff"
+    }}?byline=0&portrait=0&title=0&color=fff"
     frameborder="0"
     webkitallowfullscreen
     mozallowfullscreen
